<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aboutme_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutme_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/aboutme_text"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/aboutme_image_desc"
        android:paddingTop="2sp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/nickname_text"
        style="@style/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/nickname_text"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto"
        android:text="@string/done_button" />

    <TextView
        android:id="@+id/nickname_textvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8sp"
        android:paddingTop="8sp"
        android:paddingRight="8sp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio" />
    </ScrollView>
</LinearLayout>
